tests/toy/neg/001401_mutation.toylang
program a = { var a : bool then } .
